// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withThemeMixin overrides styles without affecting siblings 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#00676D",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#00676D",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#F8F7F4",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#00676D",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
</View>
`;

exports[`withThemeMixin prunes null inputs 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#00676D",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
</View>
`;

exports[`withThemeMixin reverts to themeInput when mixin has null values 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "salmon",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "blue",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
</View>
`;

exports[`withThemeMixin works with dynamic props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "red",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "blue",
          "fontFamily": "InterUI-Black",
          "fontSize": 24,
          "lineHeight": 27.6,
        }
      }
    >
      Hi there!
    </Text>
    <Text
      style={
        Object {
          "color": "#17B582",
          "fontFamily": "InterUI-Bold",
          "fontSize": 12,
          "lineHeight": 18,
        }
      }
    >
      Lorem ipsum dolor sit amet.
    </Text>
    <Text
      bold={false}
      italic={false}
      style={
        Object {
          "color": "#F8F7F4",
          "fontFamily": "InterUI-Regular",
          "fontSize": 16,
          "lineHeight": 26,
        }
      }
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sodales sit amet ante eu lobortis. In vitae faucibus lectus, at interdum nibh. Fusce suscipit tincidunt justo, vitae cursus mi fermentum eget.
    </Text>
  </View>
</View>
`;
